Fixed the landing form on the about page

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -27,7 +27,7 @@ eleventyNavigation:
             </div>
             <!--Bottom Corners-->
         </div>
-        <form class="cs-form" id="cs-form-2041" name="Landing Form" action="/thank-you" netlify>
+        <form class="cs-form" id="cs-form-2041" name="Landing Form" method="post" action="/thank-you" netlify>
             <label class="cs-label">
                 <div class="cs-flex">
                     Email <span class="span cs-color">*</span>
