--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -14,7 +14,6 @@ eleventyNavigation:
 {% endblock %} {% block body %}
 
 
-
 <!-- ============================================ -->
 <!--                   Contact                    -->
 <!-- ============================================ -->
@@ -47,7 +46,7 @@ eleventyNavigation:
                     </picture>
                     <div class="cs-flex-group">
                         <span class="cs-header">Email</span>
-                        <a href="mailto:Email@stitch.com" class="cs-link">HussainWebDesigns@gmail.com</a>
+                        <a href="mailto:hussainwebdesigns@gmail.com" class="cs-link">hussainwebdesigns@gmail.com</a>
                     </div>
                 </li>
                 <li class="cs-li">
