Fixing form on the about page

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -44,7 +44,7 @@ eleventyNavigation:
                 <div class="cs-flex">
                     Message <span class="span cs-color">*</span>
                 </div>
-                <input class="cs-input" required type="text" id="message-2041" name="message" placeholder="I’m interested in a complete package...">
+                <input class="cs-input" required type="text" id="message-2041" name="Message" placeholder="I’m interested in a complete package...">
             </label>
             <button class="cs-button-solid cs-submit">Get Started</button>
         </form>
