Added new testimonial and fixed about contact form

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@ eleventyNavigation:
             <span class="cs-topper">Hussain web designs</span>
             <h1 class="cs-title">Complete Digital Solutions For Small Businesses</h1>
             <p class="cs-text">
-                Get everything you need to dominate your local market: a stunning custom website, a professional Google Business profile, and an automated review collection system. Plus professional branding and design services.
+                Get everything you need to dominate your local market with a stunning custom website, a professional Google Business profile, an automated review collection system, and high-quality branding and design services.
             </p>
             <a href="/contact" class="cs-button-solid cs-button-solid-left">Contact Us</a>
         </div>
@@ -287,16 +287,16 @@ eleventyNavigation:
         </li>
         <!-- Card 2 -->
         <li class="cs-item">
-          <a href="https://swgrillz.co.uk" class="cs-link" target="_blank">
+          <a href="https://safesecure247.co.uk" class="cs-link" target="_blank">
             <picture class="cs-picture">
-              <source media="(max-width: 600px)" srcset="/assets/images/SW-Grillz-Mockup.jpg">
-              <source media="(min-width: 601px)" srcset="/assets/images/SW-Grillz-Mockup.jpg">
-              <img loading="lazy" decoding="async" src="/assets/images/SW-Grillz-Mockup.jpg" alt="SW Grillz website" width="346" height="346">
+              <source media="(max-width: 600px)" srcset="/assets/images/Safe-&-Secure-247-Mockup.jpg">
+              <source media="(min-width: 601px)" srcset="/assets/images/Safe-&-Secure-247-Mockup.jpg">
+              <img loading="lazy" decoding="async" src="/assets/images/Safe-&-Secure-247-Mockup.jpg" alt="Safe & Secure 24/7 website" width="346" height="346">
             </picture>
             <div class="cs-item-text">
               <div class="cs-flex">
-                <h3 class="cs-h3">SW Grillz</h3>
-                <span class="cs-desc">A food container serving grilled food in the North of Bristol</span>
+                <h3 class="cs-h3">Safe & Secure 24/7</h3>
+                <span class="cs-desc">A window and door solutions company based in the South of the UK</span>
               </div>
               <picture class="cs-icon-wrapper">
                 <img class="cs-icon" decoding="async" src="/assets/svgs/upper-right-arrow2.svg" alt="arrow" width="413" height="374" aria-hidden="true">
@@ -345,7 +345,7 @@ eleventyNavigation:
             <li class="cs-item">
                 <img class="cs-item-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Noble-Autos-Logo.jpg" alt="profile picture" width="72" height="72">
                 <p class="cs-item-text">
-                    “Since Ansar set up the complete package for us, we've had more customers find us online than ever before. The website looks professional and the review system actually works - customers are leaving reviews without us having to chase them.”
+                    <em>“Since Ansar set up the complete package for me, I've had a lot more customers find me online than ever before. The website looks professional and the review system actually works, customers are finally leaving reviews without me having to chase them.”</em>
                 </p>
                 <div class="cs-flex-group">
                     <span class="cs-reviewer">
@@ -360,7 +360,7 @@ eleventyNavigation:
             <li class="cs-item">
                 <img class="cs-item-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Southwest-Prestige-Hire-Logo.jpg" alt="profile picture" width="72" height="72">
                 <p class="cs-item-text">
-                    “I highly recommend Hussain Web Designs for anything web related. Ansar helped me get 2 beautiful websites setup for my car rental and food businesses. He was very knowledgeable and fast. Thanks again 🙌🏼”
+                    <em>“I highly recommend Hussain Web Designs for anything web related. Ansar helped me get 2 beautiful websites setup for my car rental and food businesses. He was very knowledgeable and fast. Thanks again 🙌🏼”</em>
                 </p>
                 <div class="cs-flex-group">
                     <span class="cs-reviewer">
@@ -373,14 +373,14 @@ eleventyNavigation:
             </li>
             <!-- Review 2 -->
             <li class="cs-item">
-                <img class="cs-item-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/southwest-link-jewellers-logo2.jpg" alt="profile picture" width="72" height="72">
+                <img class="cs-item-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/sas247-logo.png" alt="profile picture" width="72" height="72">
                 <p class="cs-item-text">
-                    “Ansar helped me get a beautiful Ecommerce site setup for my business as well as adding in a Google profile and review collection system. It’s completely transformed how our business looks online and has started bringing in more business.
+                    <em>“Ansar put together a beautiful website for my windows and door solutions business. I also asked him to add my entire custom doors brochure to the website and he got it done in no time. Highly recommend and very easy to work with.”</em>
                 </p>
                 <div class="cs-flex-group">
                     <span class="cs-reviewer">
-                        Kelton H.
-                        <span class="cs-desc">Owner,<br>SW Links Jewellers</span>
+                        Jason B.
+                        <span class="cs-desc">Owner,<br>Safe & Secure 24/7</span>
                     </span>
                     <span class="cs-rating">5.0</span>
                     <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars-yellow.svg" alt="stars" width="96" height="16">
