Changed hero section copy

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@ eleventyNavigation:
             <span class="cs-topper">Hussain web designs</span>
             <h1 class="cs-title">Complete Digital Solutions For Small Businesses</h1>
             <p class="cs-text">
-                Get everything you need to dominate your local market with a stunning custom website, a professional Google Business profile, an automated review collection system, and high-quality branding and design services.
+                Get everything you need to dominate your local market with a stunning custom website, a professional Google Business profile, and an automated review collection system. Plus expert branding and design services.
             </p>
             <a href="/contact" class="cs-button-solid cs-button-solid-left">Contact Us</a>
         </div>
