Added a stat change to the google business setup page

--- a/src/content/pages/google-business-setup.html
+++ b/src/content/pages/google-business-setup.html
@@ -60,7 +60,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <span class="cs-number">46%</span>
-                <span class="cs-stat-text">Visit Within 24 Hours</span>
+                <span class="cs-stat-text">Visit Within 7 Days</span>
                 <p class="cs-text-2">
                     of people who search for local businesses visit within 7 days
                 </p>
