Changed YAML symbol to sync file with Google Drive

--- a/src/content/pages/logo-branding.html
+++ b/src/content/pages/logo-branding.html
@@ -1,5 +1,5 @@
 ---
-title: "Logo & Branding | Hussain Web Designs"
+title: "Logo and Branding | Hussain Web Designs"
 description: "Professional logo design and brand identity that makes your business memorable and builds trust with customers."
 permalink: "logo-branding/"
 eleventyNavigation:
