Updated phone number on header and removed pricing from the site

--- a/src/index.html
+++ b/src/index.html
@@ -204,9 +204,9 @@ eleventyNavigation:
         </div>
         <div class="cs-content">
             <span class="cs-topper">Complete Digital Package</span>
-            <h2 class="cs-title">Complete Digital Solutions From Just £99 Per Month</h2>
+            <h2 class="cs-title">Complete Digital Solutions</h2>
             <p class="cs-text">
-                We believe local businesses deserve a complete online presence that is affordable, so our digital package includes a custom hand-coded website, Google Business Profile optimisation, automated review collection system, service area mapping, and maintenance, all for one simple monthly fee. Everything you need to attract more local customers and grow your business online.
+                We believe local businesses deserve a complete online presence, so our digital package includes a custom hand-coded website, Google Business Profile optimisation, automated review collection system, service area mapping, and maintenance. Everything you need to attract more local customers and grow your business online.
             </p>
             <ul class="cs-card-group">
                 <li class="cs-item">
