Changed the email on the site

--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -46,7 +46,7 @@ eleventyNavigation:
                     </picture>
                     <div class="cs-flex-group">
                         <span class="cs-header">Email</span>
-                        <a href="mailto:hussainwebdesigns@gmail.com" class="cs-link">hussainwebdesigns@gmail.com</a>
+                        <a href="mailto:info@hussainwebdesigns.com" class="cs-link">info@hussainwebdesigns.com</a>
                     </div>
                 </li>
                 <li class="cs-li">
