Updated meta description

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Hussain Web Designs | Complete Digital Solutions For Small Businesses"
-description: "Get everything you need to dominate your local market: a stunning custom website, a professional Google Business profile, and an automated review collection system. Plus professional branding and design services."
+description: "Complete digital solutions for small businesses: custom websites, Google Business Profile optimization, automated review collection, and professional branding services."
 preloadImg: "/assets/images/abstract.jpg"
 permalink: "/"
 tags: "sitemap" # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
