Updated meta description

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Hussain Web Designs | Complete Digital Solutions For Small Businesses"
-description: "Complete digital solutions for small businesses: custom websites, Google Business Profile optimization, automated review collection, and professional branding services."
+description: "Professional digital services that are designed to help your business get found online, build trust with customers, and grow your local presence"
 preloadImg: "/assets/images/abstract.jpg"
 permalink: "/"
 tags: "sitemap" # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
