Added seo optimised keywords into name schema

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@ eleventyNavigation:
     {
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
-    "name": "{{ client.name }}",
+    "name": "Bristol Web Design Agency",
     "url": "{{ client.domain }}{{ page.url }}",
     "telephone": "{{ client.phoneFormatted }}",
     "email": "{{ client.email }}",
